fix: pre code area overflow in tweets/index

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -44,7 +44,7 @@
 }
 
 .markdown pre code {
-  @apply block bg-transparent p-0 overflow-visible rounded-none;
+  @apply block bg-transparent p-0 overflow-x-auto rounded-none;
 }
 
 .markdown ul {
